tests/NormalTests/paczka1/fuzzy1/19104231.err
Error in line 19: nGFwEKPw9 A659 82,7
Error in line 26: pUlMdO5OgE9 S19 314,2
Error in line 36: pUlMdO5OgE9 S322 26,2
